Add FilesystemProcessorTest